--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       content="Landing Page project - The Odin Project"
     />
     <meta property="og:image" content="/some-image.png" />
-    <meta property="og:url" content="/this-page.html" />
+    <meta
+      property="og:url"
+      content="https://diegusaurelius.github.io/landing-page/"
+    />
     <meta property="og:site_name" content="Landing Page" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image:alt" content="image description" />
