Update font family and favicon

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="author" content="Diegus Aurelius" />
     <meta
       name="description"
-      content="Landing Page project - The Odin Project"
+      content="Landing page project - The Odin Project"
     />
     <meta property="og:title" content="Landing Page" />
     <meta
       property="og:description"
-      content="Landing Page project - The Odin Project"
+      content="Landing page project - The Odin Project"
     />
     <meta property="og:image" content="/some-image.png" />
     <meta
