--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image:alt" content="image description" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      sizes="any"
+      href="./img/favicon.svg"
+    />
     <script defer src="./main.js"></script>
     <title>Landing Page</title>
   </head>
