Add basic html structure and style

--- a/index.html
+++ b/index.html
@@ -28,10 +28,52 @@
       sizes="any"
       href="./img/favicon.svg"
     />
-    <script defer src="./main.js"></script>
     <title>Landing Page</title>
   </head>
   <body>
-    <h1>Landing Page</h1>
+    <header>
+      <nav>
+        <ul>
+          <li class="logo">Header Logo</li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+        </ul>
+      </nav>
+      <div class="hero">
+        <div class="info">
+          <h1>This website is awesome</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit beatae
+            quas corporis quidem possimus modi, a maiores ex consectetur ad
+            veritatis. Eius aliquid quam nemo! Ea neque pariatur ipsam suscipit.
+          </p>
+          <button>Sign up</button>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="content">
+        <h2>Some random information</h2>
+      </div>
+      <div class="quote">
+        <blockquote cite="https://www.imdb.com/title/tt1772925/">
+          <p>
+            Once you decide on your occupation, you must immerse yourself in
+            your work. You have to fall in love with your work. Never complain
+            about your job. You must dedicate your life to mastering your skill.
+            That's the secret of success and is the key to being regarded
+            honorably.
+          </p>
+        </blockquote>
+        <p>-Jiro Ono, <cite>Jiro Dreams of Sushi</cite></p>
+      </div>
+      <div class="call-to-action">
+        <p>Call to action it's time</p>
+      </div>
+    </main>
+    <footer>
+      <p>Copyright &copy; DiegusAurelius</p>
+    </footer>
   </body>
 </html>
