--- a/index.html
+++ b/index.html
@@ -55,6 +55,22 @@
     <main>
       <div class="content">
         <h2>Some random information</h2>
+        <div class="item">
+          <img src="https://placehold.co/150" alt="Some random image" />
+          <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="item">
+          <img src="https://placehold.co/150" alt="Some random image" />
+          <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="item">
+          <img src="https://placehold.co/150" alt="Some random image" />
+          <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="item">
+          <img src="https://placehold.co/150" alt="Some random image" />
+          <p>This is some subtext under an illustration or image</p>
+        </div>
       </div>
       <div class="quote">
         <blockquote cite="https://www.imdb.com/title/tt1772925/">
@@ -69,7 +85,15 @@
         <p>-Jiro Ono, <cite>Jiro Dreams of Sushi</cite></p>
       </div>
       <div class="call-to-action">
-        <p>Call to action it's time</p>
+        <div class="cta-box">
+          <div class="cta-copy">
+            <h3>Call to action it's time</h3>
+            <p>
+              Sign up for our product by clicking that button right over there!
+            </p>
+          </div>
+          <button>Sign up</button>
+        </div>
       </div>
     </main>
     <footer>
