--- a/index.html
+++ b/index.html
@@ -35,56 +35,64 @@
       <nav>
         <ul>
           <li class="logo">Header Logo</li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
+          <li><a href="#">Link one</a></li>
+          <li><a href="#">Link two</a></li>
+          <li><a href="#">Link three</a></li>
         </ul>
       </nav>
-      <div class="hero">
-        <div class="info">
-          <h1>This website is awesome</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit beatae
-            quas corporis quidem possimus modi, a maiores ex consectetur ad
-            veritatis. Eius aliquid quam nemo! Ea neque pariatur ipsam suscipit.
-          </p>
-          <button>Sign up</button>
+      <div class="container">
+        <div class="hero">
+          <div class="info">
+            <h1>This website is awesome</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              beatae quas corporis quidem possimus modi, a maiores ex
+              consectetur ad veritatis. Eius aliquid quam nemo! Ea neque
+              pariatur ipsam suscipit.
+            </p>
+            <button>Sign up</button>
+          </div>
+          <img src="https://placehold.co/450x200" alt="Random image" />
         </div>
       </div>
     </header>
     <main>
-      <div class="content">
+      <div class="container">
         <h2>Some random information</h2>
-        <div class="item">
-          <img src="https://placehold.co/150" alt="Some random image" />
-          <p>This is some subtext under an illustration or image</p>
-        </div>
-        <div class="item">
-          <img src="https://placehold.co/150" alt="Some random image" />
-          <p>This is some subtext under an illustration or image</p>
-        </div>
-        <div class="item">
-          <img src="https://placehold.co/150" alt="Some random image" />
-          <p>This is some subtext under an illustration or image</p>
-        </div>
-        <div class="item">
-          <img src="https://placehold.co/150" alt="Some random image" />
-          <p>This is some subtext under an illustration or image</p>
+        <div class="content">
+          <div>
+            <img src="https://placehold.co/150" alt="Some random image" />
+            <p>This is some subtext under an illustration or image</p>
+          </div>
+          <div>
+            <img src="https://placehold.co/150" alt="Some random image" />
+            <p>This is some subtext under an illustration or image</p>
+          </div>
+          <div>
+            <img src="https://placehold.co/150" alt="Some random image" />
+            <p>This is some subtext under an illustration or image</p>
+          </div>
+          <div>
+            <img src="https://placehold.co/150" alt="Some random image" />
+            <p>This is some subtext under an illustration or image</p>
+          </div>
         </div>
       </div>
-      <div class="quote">
+    </main>
+
+    <div class="quote">
+      <div class="container">
         <blockquote cite="https://www.imdb.com/title/tt1772925/">
-          <p>
-            Once you decide on your occupation, you must immerse yourself in
-            your work. You have to fall in love with your work. Never complain
-            about your job. You must dedicate your life to mastering your skill.
-            That's the secret of success and is the key to being regarded
-            honorably.
-          </p>
+          Once you decide on your occupation, you must immerse yourself in your
+          work. You have to fall in love with your work. Never complain about
+          your job. You must dedicate your life to mastering your skill. That's
+          the secret of success and is the key to being regarded honorably.
+          <p class="cite">-Jiro Ono, <cite>Jiro Dreams of Sushi</cite></p>
         </blockquote>
-        <p>-Jiro Ono, <cite>Jiro Dreams of Sushi</cite></p>
       </div>
-      <div class="call-to-action">
+    </div>
+    <div class="call-to-action">
+      <div class="container">
         <div class="cta-box">
           <div class="cta-copy">
             <h3>Call to action it's time</h3>
@@ -95,7 +103,8 @@
           <button>Sign up</button>
         </div>
       </div>
-    </main>
+    </div>
+
     <footer>
       <p>Copyright &copy; DiegusAurelius</p>
     </footer>
