Update url, tweak text and padding

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:image" content="/some-image.png" />
     <meta
       property="og:url"
-      content="https://diegusaurelius.github.io/landing-page/"
+      content="https://diegusaurelius.github.io/odin-landing-page/"
     />
     <meta property="og:site_name" content="Landing Page" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -47,8 +47,7 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
               beatae quas corporis quidem possimus modi, a maiores ex
-              consectetur ad veritatis. Eius aliquid quam nemo! Ea neque
-              pariatur ipsam suscipit.
+              consectetur ad veritatis.
             </p>
             <button>Sign up</button>
           </div>
