--- a/v2/index.html
+++ b/v2/index.html
@@ -13,16 +13,34 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#">Landing Page V2</a></li>
-          <li><a href="#">Link one</a></li>
-          <li><a href="#">Link two</a></li>
-          <li><a href="#">Link three</a></li>
-        </ul>
-      </nav>
-      <button>Test</button>
+    <header class="header">
+      <div class="container">
+        <nav>
+          <ul class="menu">
+            <li><a href="#">Landing Page</a></li>
+            <li><a href="#">One</a></li>
+            <li><a href="#">Two</a></li>
+            <li><a href="#">Three</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
+    <main>
+      <section class="hero full-width">
+        <div class="container">Hero</div>
+      </section>
+      <section class="content full-width">
+        <div class="container">Content</div>
+      </section>
+      <section class="quote full-width">
+        <div class="container">Quote</div>
+      </section>
+      <section class="cta full-width">
+        <div class="container">Call to action</div>
+      </section>
+    </main>
+    <footer class="footer">
+      <p>Copyright 💀 DiegusAurelius</p>
+    </footer>
   </body>
 </html>
