--- a/v2/index.html
+++ b/v2/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <nav>
           <ul class="menu">
-            <li><a href="#">Landing Page</a></li>
+            <li class="logo"><a href="#">Landing Page</a></li>
             <li><a href="#">One</a></li>
             <li><a href="#">Two</a></li>
             <li><a href="#">Three</a></li>
