Add text to html

--- a/v2/index.html
+++ b/v2/index.html
@@ -27,10 +27,14 @@
     </header>
     <main>
       <section class="hero full-width">
-        <div class="container">Hero</div>
+        <div class="container">
+          <h1>This website is awesome</h1>
+        </div>
       </section>
       <section class="content full-width">
-        <div class="container">Content</div>
+        <div class="container">
+          <h2>Some random information.</h2>
+        </div>
       </section>
       <section class="quote full-width">
         <div class="container">Quote</div>
