Simplify classes and selectors

--- a/v2/index.html
+++ b/v2/index.html
@@ -26,20 +26,20 @@
       </div>
     </header>
     <main>
-      <section class="hero full-width">
+      <section class="hero">
         <div class="container">
           <h1>This website is awesome</h1>
         </div>
       </section>
-      <section class="content full-width">
+      <section class="content">
         <div class="container">
           <h2>Some random information.</h2>
         </div>
       </section>
-      <section class="quote full-width">
+      <section class="quote">
         <div class="container">Quote</div>
       </section>
-      <section class="cta full-width">
+      <section class="cta">
         <div class="container">Call to action</div>
       </section>
     </main>
