--- a/v2/index.html
+++ b/v2/index.html
@@ -27,17 +27,51 @@
     </header>
     <main>
       <section class="hero">
-        <div class="container">
-          <h1>This website is awesome</h1>
+        <div class="container hero-info">
+          <div class="info">
+            <h1>This website is awesome</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+              quibusdam beatae optio enim officia praesentiumt.
+            </p>
+            <button>Sign up</button>
+          </div>
+          <img src="https://placehold.co/450x200" alt="Place holder" />
         </div>
       </section>
       <section class="content">
         <div class="container">
           <h2>Some random information.</h2>
+          <div class="panels">
+            <div>
+              <img src="https://placehold.co/150x150" alt="Place holder" />
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </div>
+            <div>
+              <img src="https://placehold.co/150x150" alt="Place holder" />
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </div>
+            <div>
+              <img src="https://placehold.co/150x150" alt="Place holder" />
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </div>
+            <div>
+              <img src="https://placehold.co/150x150" alt="Place holder" />
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
         </div>
       </section>
       <section class="quote">
-        <div class="container">Quote</div>
+        <div class="container">
+          <blockquote cite="https://www.huxley.net/bnw/four.html">
+            <p>
+              Words can be like X-rays, if you use them properly—they’ll go
+              through anything. You read and you’re pierced.
+            </p>
+          </blockquote>
+          <p class="cite">—Aldous Huxley, <cite>Brave New World</cite></p>
+        </div>
       </section>
       <section class="cta">
         <div class="container">Call to action</div>
