--- a/v2/index.html
+++ b/v2/index.html
@@ -66,19 +66,27 @@
         <div class="container">
           <blockquote cite="https://www.huxley.net/bnw/four.html">
             <p>
-              Words can be like X-rays, if you use them properly—they’ll go
-              through anything. You read and you’re pierced.
+              Words can be like X-rays, if you use them properly—they'll go
+              through anything. You read and you're pierced.
             </p>
           </blockquote>
           <p class="cite">—Aldous Huxley, <cite>Brave New World</cite></p>
         </div>
       </section>
       <section class="cta">
-        <div class="container">Call to action</div>
+        <div class="container cta-box">
+          <div class="cta-info">
+            <p>
+              <span class="title">Call to action! It's time!</span>Lorem ipsum
+              dolor sit amet consectetur adipisicing elit.
+            </p>
+            <button>Sign up</button>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <p>Copyright 💀 DiegusAurelius</p>
+      <p>💀 DiegusAurelius</p>
     </footer>
   </body>
 </html>
