--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="DiegusAurelius" />
+    <meta
+      name="description"
+      content="Landing page project - The Odin Project"
+    />
+    <meta property="og:title" content="Landing Page" />
+    <meta
+      property="og:description"
+      content="Landing page project - The Odin Project"
+    />
+
+    <meta
+      property="og:url"
+      content="https://diegusaurelius.github.io/odin-landing-page/"
+    />
+    <meta property="og:site_name" content="Landing Page Project" />
+
     <title>Landing Page - The Odin Project</title>
     <link rel="stylesheet" href="./style.css" />
     <link
