--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta property="og:site_name" content="Landing Page Project" />
 
-    <title>Landing Page - The Odin Project</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="icon"
