--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Landing page project - The Odin Project"
     />
-    <meta property="og:title" content="Landing Page" />
+    <meta property="og:title" content="Odin Landing Page" />
     <meta
       property="og:description"
       content="Landing page project - The Odin Project"
@@ -20,7 +20,7 @@
     />
     <meta property="og:site_name" content="Landing Page Project" />
 
-    <title>Landing Page</title>
+    <title>Odin Landing Page</title>
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="icon"
@@ -34,7 +34,7 @@
       <div class="container">
         <nav>
           <ul class="menu">
-            <li class="logo"><a href="#">Landing Page</a></li>
+            <li class="logo"><a href="#">Odin Landing Page</a></li>
             <li><a href="#">One</a></li>
             <li><a href="#">Two</a></li>
             <li><a href="#">Three</a></li>
