--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="container">
         <nav>
           <ul class="menu">
-            <li class="logo"><a href="#">Odin Landing Page</a></li>
+            <li class="logo"><a href="#">Odin Landing</a></li>
             <li><a href="#">One</a></li>
             <li><a href="#">Two</a></li>
             <li><a href="#">Three</a></li>
