--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </section>
       <section class="content">
         <div class="container">
-          <h2>Some random information.</h2>
+          <h2>Some random information</h2>
           <div class="panels">
             <div>
               <img src="https://placehold.co/150x150" alt="Place holder" />
