Footer with link to TOP

--- a/index.html
+++ b/index.html
@@ -102,8 +102,16 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <p>💀 DiegusAurelius</p>
+    <footer>
+      <div class="container footer">
+        <span>💀 DiegusAurelius</span>
+        <span>
+          <a
+            href="https://www.theodinproject.com/paths/foundations/courses/foundations"
+            >Foundations Course</a
+          >
+        </span>
+      </div>
     </footer>
   </body>
 </html>
