--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="cta-info">
             <p>
               <span class="title">Call to action! It's time!</span>Lorem ipsum
-              dolor sit amet consectetur adipisicing elit.
+              dolor sit amet consectetu adipisicing elit.
             </p>
             <button>Sign up</button>
           </div>
